--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.5",
+        "maatwebsite/excel": "^3.1",
         "mews/captcha": "^3.3",
         "realrashid/sweet-alert": "^7.2",
         "twilio/sdk": "^8.3"
